--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".Configuracion" />
-        <activity android:name=".Juego"></activity>
+        <activity android:name=".Juego" />
+        <activity android:name=".Puntaje"></activity>
     </application>
 
 </manifest>
